<resources>
    <string name="app_name">Savings Tracker</string>
    <string name="total_balance">Total balance:</string>
    <string name="empty_expense_msg">You don\'t have any operation yet</string>
    <string name="create_new_account">New account</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="initial_balance_optional">Initial balance (optional)</string>
    <string name="add_expense">Add expense</string>
    <string name="expense">Expense</string>
    <string name="history">History</string>
    <string name="bank_account">Bank account</string>
    <string name="cash">Cash</string>
    <string name="investment">Investment</string>
    <string name="balance">$ %s</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="transfer">Transfer</string>
    <string name="income">Income</string>
    <string name="zero">$0</string>
    <string name="new_transaction">New transaction</string>
    <string name="save">save</string>
    <string name="balance_hint">Balance</string>
    <string name="select_date">Select date</string>
    <string name="note_hint">Note</string>
    <string name="select_account">Select Account</string>
    <string name="my_accounts">My accounts</string>
    <string name="add_account">Add account</string>
    <string name="select_icon">Select icon</string>
    <string name="select_account_type">Select account type</string>
    <string name="create_account">Create account</string>
    <string name="add_icon">Add icon</string>
    <string name="type">Type</string>
    <string name="you_dont_have_accounts">You don\'t have accounts</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="select_category">Select category</string>
</resources>