<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_view"
        />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back"
        android:background="@null"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn" />

    <include
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        layout="@layout/item_balance_card"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/create"
        android:background="@drawable/bg_button"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:boxStrokeColor="@color/green"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/balance_et"
            android:hint="@string/title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/balance_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:boxStrokeColor="@color/green"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/balance_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="@string/initial_balance_optional" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bank_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/bank_account"
        android:background="@drawable/bg_bank_selected"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/balance_til"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_bank_card"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cash_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/cash"
        android:background="@drawable/bg_cash"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/bank_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_cash"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/invest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/investment"
        android:background="@drawable/bg_invest"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/cash_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_invest"/>


</androidx.constraintlayout.widget.ConstraintLayout>