<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/edit_cv"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:shape="ring"
        android:layout_margin="20dp"
        android:innerRadius="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="75dp"
        app:layout_constraintEnd_toStartOf="@id/remove_cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center"
            app:tint="@color/green"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/edit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/edit_cv"
        app:layout_constraintEnd_toEndOf="@id/edit_cv"
        app:layout_constraintTop_toBottomOf="@id/edit_cv"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/remove_cv"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:shape="ring"
        android:layout_margin="20dp"
        android:innerRadius="0dp"
        app:cardCornerRadius="75dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@id/history_cv"
        app:layout_constraintStart_toEndOf="@id/edit_cv"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center"
            app:tint="@color/green"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/remove_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/remove_cv"
        app:layout_constraintEnd_toEndOf="@id/remove_cv"
        app:layout_constraintTop_toBottomOf="@id/remove_cv"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/history_cv"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:shape="ring"
        android:layout_margin="20dp"
        android:innerRadius="0dp"
        app:cardCornerRadius="75dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/remove_cv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center"
            app:tint="@color/green"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/history_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/history_cv"
        app:layout_constraintEnd_toEndOf="@id/history_cv"
        app:layout_constraintTop_toBottomOf="@id/history_cv"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/expense_cv"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:shape="ring"
        android:layout_margin="20dp"
        android:innerRadius="0dp"
        app:cardCornerRadius="75dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@id/income_cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_tv">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center"
            app:tint="@color/green"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/expense_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/expense_cv"
        app:layout_constraintEnd_toEndOf="@id/expense_cv"
        app:layout_constraintTop_toBottomOf="@id/expense_cv"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/income_cv"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:shape="ring"
        android:layout_margin="20dp"
        android:innerRadius="0dp"
        app:cardCornerRadius="75dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@id/transfer_cv"
        app:layout_constraintStart_toEndOf="@id/expense_cv"
        app:layout_constraintTop_toBottomOf="@id/remove_tv">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center"
            app:tint="@color/green"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/income_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/income_cv"
        app:layout_constraintEnd_toEndOf="@id/income_cv"
        app:layout_constraintTop_toBottomOf="@id/income_cv"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/transfer_cv"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:shape="ring"
        android:layout_margin="20dp"
        android:innerRadius="0dp"
        app:cardCornerRadius="75dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/income_cv"
        app:layout_constraintTop_toBottomOf="@id/history_tv"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_edit"
            android:layout_gravity="center"
            app:tint="@color/green"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/transfer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/transfer_cv"
        app:layout_constraintEnd_toEndOf="@id/transfer_cv"
        app:layout_constraintTop_toBottomOf="@id/transfer_cv"/>


</androidx.constraintlayout.widget.ConstraintLayout>