<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@null"
        android:gravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_back"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/add_expense"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn" />

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_shopping_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />

    <View
        android:id="@+id/main_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bottom_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_iv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_orange_light"
        android:text="Add"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:boxStrokeColor="@android:color/holo_orange_light"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/balance_et"
            android:hint="@string/title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expense_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:boxStrokeColor="@android:color/holo_orange_light"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expense_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense"
            android:imeOptions="actionDone"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:checkedButton="@+id/expense_rb"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_til">

        <RadioButton
            android:id="@+id/expense_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Expense"
            app:buttonTint="@android:color/holo_orange_light"/>

        <RadioButton
            android:id="@+id/income_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="Income"
            app:buttonTint="@android:color/holo_orange_light"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>